[kup-data-table] Added prop groupLabelDisplay for changing the displayed group label. [kup-paginator] fixed a bug of z-index of the combo box.

--- a/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
+++ b/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
@@ -101,6 +101,9 @@
     --kup-data-table_density-icon-color,
     #{$mainTextColor}
   );
+
+  position: relative;
+  z-index: 0;
 }
 
 #data-table-wrapper {
