--- a/packages/ketchup/src/components/kup-paginator/kup-paginator.scss
+++ b/packages/ketchup/src/components/kup-paginator/kup-paginator.scss
@@ -83,6 +83,7 @@
     margin: 0 0.25rem;
     --kup-combo_input_border-color: transparent;
     --kup-combo_input_border-color--selected: transparent;
+    z-index: 0;
   }
 }
 
